feat(bridge): Make secret selection dynamic
